<resources>
    <string name="app_name">Punto3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quices">Quices:</string>
    <string name="exposiciones">Exposiciones:</string>
    <string name="practicas">Practicas de laboratorio:</string>
    <string name="proyecto">Proyecto Final:</string>
    <string name="nota">Nota Final:</string>
    <string name="calcular">Calcular</string>
    <string name="hint_quices">Ingrese la nota de quices</string>
    <string name="hint_exposiciones">Ingrese la nota de exposiciones</string>
    <string name="hint_practicas">Ingrese la nota de las practicas</string>
    <string name="hint_proyecto">Ingrese la nota del proyecto</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
